# dkViewer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
assets/: BasicVertexShader.vert  FragPosBased.frag  Frag_BasicLighting.frag  Frag_ColorInterp.frag  Frag_Uniform.frag  GeoWireframe.gs  VertexShader.vert
include/: AABB.h  BWClothSolver.h  Camera.h  Mesh.h  Octree.h  Scene.h  Shader.h  SpringSolver.h  TextureManager.h  utils.h
include/glad/: glad.h
src/: AABB.cpp  BWClothSolver.cpp  Camera.cpp  Mesh.cpp  Octree.cpp  Scene.cpp  SpringSolver.cpp  TextureManager.cpp  main.cpp
tests/: CMakeLists.txt  test_main.cpp
